# CompEarth_Workshop

./: README.md  pyproject.toml
compearth/: __init__.py
compearth/extensions/surfdisp2k25/: README.md  README_dispsurf2k25.md  dispsurf2k25.py
compearth/utils/: __init__.py  sampling.py  viz.py
migrate/: __init__.py
migrate/extensions/surfdisp2k25/: README.md  README_dispsurf2k25.md  dispsurf2k25.py  getsol.py  sphere.py  var.py
notebooks/: tutorial1.ipynb
tests/: test_sampling.py
